Archive2/05/98e02bf470d41e/output
main.cpp:20:11: error: 'A' is a private member of 'A'
    D() : A(1), C(3) { }
          ^
main.cpp:8:11: note: constrained by private inheritance here
class B : private virtual A {
          ^~~~~~~~~~~~~~~~~
main.cpp:1:7: note: member is declared here
class A {
      ^
1 error generated.
